--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 * {
   box-sizing: border-box;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .container {
@@ -16,7 +16,7 @@ body {
   padding: 0 15px;
   display: inline-block;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 @media (max-width: 1200px) {
